--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-nuance-text-to-speech",
-  "version": "0.0.1",
-  "description": "A React Native Text-to-Speech library for Android and iOS with an option for Text-to-Speech as a Notification sound",
+  "version": "0.1",
+  "description": "A React Native Text-to-Speech library for iOS with the use of Nuance",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
